src/app/main-content/landing-page/banner-section/banner-section.component.scss
@import "../../../../styles/styles.scss";

.banner-container {
  @include scrollingBanner(-4deg, 60s);
  padding: 30px 0;
  bottom: 100px;
  left: 0;
  right: 0;
  pointer-events: none;

  .banner-track {
    gap: 0;

    span {
      font-size: 24px;
      font-weight: 400;
      flex-shrink: 0;

      &:not(.separator) {
        margin-right: $spacing-xxxl;
      }

      &.separator {
        font-size: 20px;
        flex-shrink: 0;
        margin-right: $spacing-xxxl;
      }
    }
  }
}

@media (max-width: $tablet-max) {
  .banner-container {
    bottom: 20px;
    padding: 20px 0;

    .banner-track {
      gap: $spacing-xl;

      span {
        font-size: 20px;

        &.separator {
          font-size: 18px;
        }
      }
    }
  }
}

@media (max-width: $mobile-max) {
  .banner-container {
    padding: 15px 0;

    .banner-track {
      gap: $spacing-lg;

      span {
        font-size: 16px;

        &.separator {
          font-size: 16px;
        }
      }
    }
  }
}

@media screen and (width: 1024px) and (height: 600px),
  screen and (width: 1280px) and (height: 800px) {
  .banner-container.banner-container {
    position: static;
    margin-top: auto;
    margin-bottom: 20px;
  }
}

